force-app/main/default/objects/Program__c/fields/Program_Owner__c.field-meta.xml
<CustomField>
    <fullName>Program_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Owned_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>