force-app/main/default/objects/Program__c/fields/RAG_Status__c.field-meta.xml
<CustomField>
    <fullName>RAG_Status__c</fullName>
    <label>RAG Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>