force-app/main/default/objects/Program__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acceleration</fullName>
            </value>
            <value>
                <fullName>Business Expansion</fullName>
            </value>
            <value>
                <fullName>Major Projects</fullName>
                <default>true</default>
                <label>Major Projects</label>
            </value>
            <value>
                <fullName>Run</fullName>
            </value>
            <value>
                <fullName>Sanitization</fullName>
            </value>
            <value>
                <fullName>Stabilization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>